...
            serviceSel.setLabel(service.name, forSegment: index)
            serviceSel.setImage(nil, forSegment: index)
            serviceSel.setToolTip(service.name, forSegment: index)
        }
        serviceSel.customLockedStates = services.map { $0.isEncrypted && !EncryptedVolumeManager.shared.isUnlocked(for: $0.id) }
        serviceSel.customLabels = services.map { $0.name }
        serviceSel.setAccessibilityIdentifier("ServiceSelector")
        drag.addSubview(serviceSel)
        serviceSelector = serviceSel

        // Service Selector (Collapsible)
        let collapsibleServiceSel = CollapsibleSelector()
        collapsibleServiceSel.enableDragReorder = true
...
        sessionSel.showInstantiationState = true
        sessionSel.requiresInstantiatedSegmentForTooltip = true
        sessionSel.middleClickHandler = { [weak self] segmentIndex in
            self?.handleSessionMiddleClick(at: segmentIndex)
        }
        sessionSel.sizeToFit()
        sessionSel.setAccessibilityIdentifier("SessionSelector")
        drag.addSubview(sessionSel)
        sessionSelector = sessionSel

        // Session Selector (Collapsible)
        let collapsibleSessionSel = CollapsibleSelector()
        collapsibleSessionSel.target = self
...
