...
        .init(id: "reload", title: "Reload", shortcut: .init("r", modifiers: .command)),
        .init(id: "force-reload", title: "Force Reload", shortcut: .init("r", modifiers: [.command, .shift])),
        .init(id: "origin-reload", title: "Reload from Origin", shortcut: .init("r", modifiers: [.command, .option])),
        .init(id: "find", title: "Find in Page", shortcut: .init("f", modifiers: .command)),
        .init(id: "find-next", title: "Find Next", shortcut: .init("g", modifiers: .command)),
        .init(id: "find-previous", title: "Find Previous", shortcut: .init("g", modifiers: [.command, .shift])),
        .init(id: "settings", title: "Quiper Settings", shortcut: .init(",", modifiers: [.command, .shift])),
        .init(id: "zoom-in", title: "Zoom In", shortcut: .init("=", modifiers: .command)),
        .init(id: "zoom-out", title: "Zoom Out", shortcut: .init("-", modifiers: .command)),
        .init(id: "zoom-reset", title: "Actual Size", shortcut: .init("0", modifiers: [.command, .option]))
    ]
}

...
