...
                        alternateIdentifier: "recorder_serviceDigitsSecondary_alternate"
                    )
                }

                serviceHotkeysSection
            }
            .accessibilityIdentifier("ShortcutsList")
        }
        .padding()
        .toolbar {
            ToolbarItem {
                Menu {
                    Button("Blank Action") {
...
